<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    <data>-->
    <!--        <variable-->
    <!--            name=""-->
    <!--            type="" />-->
    <!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.instructions.InstructionsFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/how_to_use"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/follow_the_steps_below_to_easily_navigate_through_the_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/circle"
            android:text="@string/after_a_successful_login_you_are_directed_to_the_welcome_screen"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
            app:layout_constraintStart_toStartOf="@+id/materialTextView4"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/circle"
            android:text="@string/clicking_the_next_button_in_the_welcome_screen_brings_you_to_this_screen"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
            app:layout_constraintStart_toStartOf="@+id/materialTextView4"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/circle"
            android:text="@string/clicking_the_next_button_here_navigates_you_to_the_shoe_listing_screen"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
            app:layout_constraintStart_toStartOf="@+id/materialTextView4"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/circle"
            android:text="@string/in_the_shoe_listing_screen_clicking_the_floating_action_button_pop_s_up_a_dialog_in_which_you_can_create_a_new_shoe"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
            app:layout_constraintStart_toStartOf="@+id/materialTextView4"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/circle"
            android:text="@string/clicking_a_shoe_in_the_listing_screen_takes_you_to_a_screen_with_the_shoe_details"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
            app:layout_constraintStart_toStartOf="@+id/materialTextView4"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@+id/materialTextView9"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>