<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    <data>-->
    <!--        <variable-->
    <!--            name=""-->
    <!--            type="" />-->
    <!--    </data>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screens.login.LoginFragment">

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#ADFCB986"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="10dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/hi_there"
                android:textAppearance="@style/TitleText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:alpha="0.7"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <com.github.captain_miao.optroundcardview.OptRoundCardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:optRoundCardBackgroundColor="@color/white"
                app:optRoundCardCornerRadius="64dp"
                app:optRoundCardElevation="8dp"
                app:optRoundCardLeftBottomCorner="false"
                app:optRoundCardRightBottomCorner="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textAppearance="@style/TitleText"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@string/your_account_to_continue"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView5"
                        app:layout_constraintStart_toStartOf="@+id/textView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_email_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="@string/email"
                        app:errorEnabled="true"
                        app:helperText="@string/required"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/et_password_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/password"
                        app:errorEnabled="true"
                        app:helperText="@string/required"
                        app:layout_constraintEnd_toEndOf="@+id/et_email_layout"
                        app:layout_constraintStart_toStartOf="@+id/et_email_layout"
                        app:layout_constraintTop_toBottomOf="@+id/et_email_layout"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:ems="10"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/login"
                        android:textSize="16sp"
                        app:backgroundTint="@color/orange_500"
                        app:layout_constraintEnd_toEndOf="@+id/et_password_layout"
                        app:layout_constraintStart_toStartOf="@+id/et_password_layout"
                        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/don_t_have_an_account"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toStartOf="@+id/btn_signup"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_signup"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:alpha="1.5"
                        android:text="@string/sign_up"
                        android:textColor="@color/orange_500"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView8"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/textView8"
                        app:layout_constraintTop_toTopOf="@+id/textView8" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/orange_500"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="@+id/et_password_layout"
                        app:layout_constraintTop_toBottomOf="@+id/et_password_layout" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.github.captain_miao.optroundcardview.OptRoundCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>