<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    <data>-->
    <!--        <variable-->
    <!--            name=""-->
    <!--            type="" />-->
    <!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_200"
        tools:context=".screens.detail.DetailFragment">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ADD SHOE" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_shoe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_name"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_shoe_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_shoe_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/et_company_layout"
            app:layout_constraintStart_toStartOf="@+id/tv_shoe_name"
            app:layout_constraintTop_toTopOf="@+id/et_company_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/et_shoe_size_layout"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toTopOf="@+id/et_shoe_size_layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/et_description_layout"
            app:layout_constraintStart_toStartOf="@+id/tv_shoe_company"
            app:layout_constraintTop_toTopOf="@+id/et_description_layout" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_shoe_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_company_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_description_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/et_company_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_shoe_size_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_shoe_name"
            app:layout_constraintTop_toBottomOf="@+id/et_description_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_shoe_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:textColor="@color/orange_500"
            app:layout_constraintEnd_toStartOf="@+id/btn_done"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_size_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/orange_500"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="@+id/et_shoe_size_layout"
            app:layout_constraintTop_toBottomOf="@+id/et_shoe_size_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>